--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nuxt": "^3.11.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
+    "vue-toastification": "^2.0.0-rc.5",
     "vue3-tabs-component": "^1.1.2"
   }
 }
