create resend otp page

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@chenfengyuan/vue-countdown": "^2.1.2",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.11.3",
     "leaflet": "^1.9.3",
