--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@chenfengyuan/vue-countdown": "^2.1.2",
+    "@formkit/nuxt": "^1.6.1",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.11.3",
     "leaflet": "^1.9.3",
