--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@chenfengyuan/vue-countdown": "^2.1.2",
     "@formkit/nuxt": "^1.6.1",
+    "@pinia/nuxt": "^0.5.1",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.11.3",
     "leaflet": "^1.9.3",
     "nuxt": "^3.11.1",
+    "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
     "vue-toastification": "^2.0.0-rc.5",
